--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -3,19 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="5dip">
-
-    <!-- Left Thumbnail image -->
-
-    <ImageView
-        android:id="@+id/img_thumbnail"
-        android:layout_width="50dip"
-        android:layout_height="50dip"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp" />
 
     <!-- Description -->
 
@@ -23,8 +13,6 @@
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/img_thumbnail"
-        android:layout_toRightOf="@+id/img_thumbnail"
         android:textColor="#040404"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -45,10 +33,10 @@
         tools:ignore="SmallSp"
         tools:text="Author 123" />
 
-    <!-- Comments -->
+    <!-- Time -->
 
     <TextView
-        android:id="@+id/comments"
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/author"
@@ -61,18 +49,21 @@
         tools:ignore="SmallSp"
         tools:text="30012 comments" />
 
-    <!-- Time -->
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="fill_parent"
+    <android.support.percent.PercentRelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/author"
-        android:layout_alignStart="@+id/author"
-        android:layout_below="@+id/author"
-        android:textColor="#343434"
-        android:textSize="10sp"
-        tools:ignore="SmallSp"
-        tools:text="12 hours ago" />
+        android:layout_alignTop="@+id/time">
+
+
+        <ImageView
+            android:id="@+id/img_thumbnail"
+            app:layout_widthPercent="100%"
+            app:layout_aspectRatio="100%"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="10dp" />
+
+    </android.support.percent.PercentRelativeLayout>
 
 </RelativeLayout>
