--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,17 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Aww Item -->
+    <dimen name="aww_item_padding">4dp</dimen>
+    <dimen name="aww_item_margin_bottom">18dp</dimen>
+    <dimen name="aww_item_margin_top">0dp</dimen>
+
+    <!-- Aww Item Content -->
+    <dimen name="aww_item_divider_height">1dp</dimen>
+    <dimen name="aww_item_divider_margin_top">4dp</dimen>
+    <dimen name="aww_item_title_size">15sp</dimen>
+    <dimen name="aww_item_author_size">8sp</dimen>
+    <dimen name="aww_item_date_size">8sp</dimen>
+
 </resources>
