--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,12 @@
     <color name="colorAccent">#401E37</color>
     <color name="colorBackground">#0c0b0c</color>
 
+
+    <color name="black">#000000</color>
+
     <!-- Aww Items -->
 
+    <color name="item_card_background_color">#33191919</color>
     <color name="item_title_color">#DCDCDC</color>
     <color name="item_author_color">#D3D3D3</color>
     <color name="item_date_color">#D3D3D3</color>
