--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,13 +6,15 @@
 
     <!-- Aww Item -->
     <dimen name="aww_item_padding">4dp</dimen>
-    <dimen name="aww_item_margin_bottom">18dp</dimen>
-    <dimen name="aww_item_margin_top">0dp</dimen>
+    <dimen name="aww_item_margin_bottom">6dp</dimen>
+    <dimen name="aww_item_margin_top">6dp</dimen>
+    <dimen name="aww_item_min_height">50dp</dimen>
 
     <!-- Aww Item Content -->
     <dimen name="aww_item_divider_height">1dp</dimen>
-    <dimen name="aww_item_divider_margin_top">4dp</dimen>
-    <dimen name="aww_item_title_size">15sp</dimen>
+    <dimen name="aww_item_divider_margin_top">5dp</dimen>
+    <dimen name="aww_item_title_size">16sp</dimen>
+    <dimen name="aww_item_title_margin_bottom">5sp</dimen>
     <dimen name="aww_item_author_size">8sp</dimen>
     <dimen name="aww_item_date_size">8sp</dimen>
 
