--- a/app/src/main/res/layout/aww_item_detail_fragment.xml
+++ b/app/src/main/res/layout/aww_item_detail_fragment.xml
@@ -15,4 +15,12 @@
         android:textColor="@color/item_title_color"
         android:text="what is this"/>
 
+    <WebView
+        android:id="@+id/image"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
