--- a/app/src/main/res/layout/aww_item_detail_fragment.xml
+++ b/app/src/main/res/layout/aww_item_detail_fragment.xml
@@ -7,20 +7,20 @@
     android:background="@color/black"
     android:clickable="true">
 
-
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/item_title_color"
-        android:text="what is this"/>
-
-    <WebView
+    <ImageView
         android:id="@+id/image"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"/>
+
+    <!--<WebView-->
+        <!--android:id="@+id/image"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:scaleType="fitCenter"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:layout_gravity="center_horizontal" />-->
 
 </LinearLayout>
