--- a/app/src/main/res/layout/aww_item_detail_fragment.xml
+++ b/app/src/main/res/layout/aww_item_detail_fragment.xml
@@ -12,15 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center_horizontal"/>
+        android:adjustViewBounds="true"/>
 
-    <!--<WebView-->
-        <!--android:id="@+id/image"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:scaleType="fitCenter"-->
-        <!--android:adjustViewBounds="true"-->
-        <!--android:layout_gravity="center_horizontal" />-->
+    <WebView
+        android:id="@+id/web"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"/>
 
 </LinearLayout>
