--- a/app/src/main/res/layout/aww_item_detail_fragment.xml
+++ b/app/src/main/res/layout/aww_item_detail_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -7,12 +7,21 @@
     android:background="@color/black"
     android:clickable="true">
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"/>
+    <!--<ImageView-->
+        <!--android:id="@+id/image"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:adjustViewBounds="true"/>-->
+
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:progressDrawable="@drawable/progress_bar_webview_bg" />
 
     <WebView
         android:id="@+id/web"
@@ -21,4 +30,4 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"/>
 
-</LinearLayout>
+</RelativeLayout>
