--- a/app/src/main/res/layout/aww_item.xml
+++ b/app/src/main/res/layout/aww_item.xml
@@ -6,6 +6,7 @@
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:minHeight="@dimen/aww_item_min_height"
     android:layout_gravity="center"
     android:layout_margin="5dp"
     card_view:cardCornerRadius="4dp"
