--- a/app/src/main/res/layout/aww_item_detail_fragment.xml
+++ b/app/src/main/res/layout/aww_item_detail_fragment.xml
@@ -23,11 +23,18 @@
         android:layout_height="10dp"
         android:progressDrawable="@drawable/progress_bar_webview_bg" />
 
-    <WebView
-        android:id="@+id/web"
+    <!--<WebView-->
+        <!--android:id="@+id/web"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:scaleType="fitCenter"-->
+        <!--android:adjustViewBounds="true"/>-->
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:scaleType="fitCenter"
-        android:adjustViewBounds="true"/>
+        android:adjustViewBounds="true" />
 
 </RelativeLayout>
