--- a/app/src/main/res/layout/aww_item.xml
+++ b/app/src/main/res/layout/aww_item.xml
@@ -83,6 +83,13 @@
                     android:layout_marginTop="3dp"
                     android:clickable="true"/>
 
+                <ProgressBar
+                    android:id="@+id/progress"
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center" />
+
         </RelativeLayout>
 
 </android.support.v7.widget.CardView>
