--- a/app/src/main/res/layout/aww_item_detail_fragment.xml
+++ b/app/src/main/res/layout/aww_item_detail_fragment.xml
@@ -7,34 +7,21 @@
     android:background="@color/black"
     android:clickable="true">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/image"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:scaleType="fitXY"-->
-        <!--android:layout_gravity="center_horizontal"-->
-        <!--android:adjustViewBounds="true"/>-->
-
-
     <ProgressBar
         android:id="@+id/progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:progressDrawable="@drawable/progress_bar_webview_bg" />
-
-    <!--<WebView-->
-        <!--android:id="@+id/web"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:scaleType="fitCenter"-->
-        <!--android:adjustViewBounds="true"/>-->
-
-    <ImageView
-        android:id="@+id/imageView"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+    <pl.droidsonroids.gif.GifImageButton
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:background="@android:color/transparent"
         android:scaleType="fitCenter"
-        android:adjustViewBounds="true" />
+        android:adjustViewBounds="true"
+        />
 
 </RelativeLayout>
